# lit_review

./: .gitignore  README.md  pyproject.toml
configs/: abstract_embeddings.yaml  abstract_embeddings_config.py  build_kg.yaml  build_kg_config.py  create_chunks.yaml  create_chunks_config.py  huggingface_rag.py  new_llm_config.py  paper_nodes.yaml  rag_config.py  visualization_config.py
data/: discrete_diffusion_titles.txt  paper_node_to_pdf.json  paper_node_to_pdf_with_url.json  paper_node_to_url_pdf.json  paper_titles.txt  useful_cypher_queries.txt
lit_review/: agent.py  agent_tools.py  building_kg.ipynb  graph_rag.ipynb  kg_builder.py  neo4j_utils.py  rag_utils.py  semantic_scholar_api.py  test_api.ipynb  utils.py  visualization.py  working_with_pdfs.ipynb
lit_review/agent/: Agent.py  AgentComponents.py  agent_tools.py  prompts.py
lit_review/langgraph_agent/: agent.py
lit_review/research_agent/: configuration.py  graph.py  state.py  tools.py
scripts/: add_abstract_embeddings.py  add_paper_nodes.ipynb  add_papers_from_title_list.py  basic_rag.ipynb  build_kg.py  building_kg.ipynb  create_chunks.ipynb  create_chunks.py  final_project.ipynb  full_agent.ipynb  gradio_langgraph.py  langGraph.ipynb  langgraph_agent.db-shm  langgraph_agent.db-wal  new_abstract_embeddings.ipynb  ollama_rag.ipynb  prepare_chunks.ipynb  react_agent.ipynb  research_agent.ipynb  test.py  visualize_kg.ipynb
