[project]
name = "lit-review"
version = "0.1.0"
description = ""
authors = [
    {name = "Tom Kerby",email = "46465501+tjkerby@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "requests (>=1.0)",
    "pandas (>=2.0)",
    "neo4j (>= 5.1)",
    "tqdm (>= 4.60)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
