[project]
name = "lit-review"
version = "0.1.0"
description = ""
authors = [
    {name = "Tom Kerby",email = "46465501+tjkerby@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "ipykernel (>=6.27,<7.0)",
    "requests (>=1.0)",
    "pandas (>=2.0)",
    "neo4j (>= 5.0)",
    "tqdm (>= 4.56)",
    "pymupdf4llm (>=0.0.15,<0.0.18)",
    "langchain (>=0.3.14,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-neo4j (>=0.2.0,<0.3.0)",
    "transformers (>=4.48.0,<5.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "sentence-transformers (>=3.3.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
